--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2385,6 +2385,51 @@
     "securityDescription": "Go to Profile page to change password",
     "goToProfile": "Go to Profile"
   },
+  "users": {
+    "add": {
+      "title": "Add New User",
+      "editTitle": "Edit User",
+      "subtitle": "Fill in the information for the new user",
+      "basicInfo": "Basic Information",
+      "name": "Full Name",
+      "username": "Username",
+      "email": "E-mail",
+      "phone": "Phone",
+      "birthday": "Birthday",
+      "personalCode": "Personal Code",
+      "password": "Password",
+      "passwordConfirmation": "Password Confirmation",
+      "roleAndType": "Role and Type",
+      "role": "Role",
+      "selectRole": "Select Role",
+      "type": "Type",
+      "selectType": "Select Type",
+      "typeUser": "User",
+      "typeOrganization": "Organization",
+      "modules": "Modules",
+      "mtk": "MTK",
+      "complex": "Complex",
+      "permissions": "Permissions",
+      "profilePhoto": "Profile Photo",
+      "selectPhoto": "Select Photo",
+      "changePhoto": "Change Photo",
+      "maxSize": "Maximum 5MB",
+      "save": "Save",
+      "formNotReady": "Form is not ready",
+      "errors": {
+        "nameRequired": "Name is required",
+        "usernameRequired": "Username is required",
+        "emailRequired": "E-mail is required",
+        "phoneRequired": "Phone is required",
+        "passwordRequired": "Password is required",
+        "passwordsMismatch": "Passwords do not match",
+        "roleRequired": "Role must be selected",
+        "photoSizeError": "Photo size cannot exceed 5MB",
+        "error": "Error",
+        "errorOccurred": "An error occurred"
+      }
+    }
+  },
   "configurator": {
     "title": "Dashboard Configurator",
     "description": "See our dashboard options",
