--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -2365,6 +2365,51 @@
     "securityDescription": "Перейдите на страницу профиля, чтобы изменить пароль",
     "goToProfile": "Перейти к профилю"
   },
+  "users": {
+    "add": {
+      "title": "Добавить нового пользователя",
+      "editTitle": "Редактировать пользователя",
+      "subtitle": "Заполните информацию для нового пользователя",
+      "basicInfo": "Основная информация",
+      "name": "Полное имя",
+      "username": "Имя пользователя",
+      "email": "E-mail",
+      "phone": "Телефон",
+      "birthday": "Дата рождения",
+      "personalCode": "Личный код",
+      "password": "Пароль",
+      "passwordConfirmation": "Подтверждение пароля",
+      "roleAndType": "Роль и тип",
+      "role": "Роль",
+      "selectRole": "Выберите роль",
+      "type": "Тип",
+      "selectType": "Выберите тип",
+      "typeUser": "Пользователь",
+      "typeOrganization": "Организация",
+      "modules": "Модули",
+      "mtk": "ТСЖ",
+      "complex": "Комплекс",
+      "permissions": "Разрешения",
+      "profilePhoto": "Фото профиля",
+      "selectPhoto": "Выбрать фото",
+      "changePhoto": "Изменить фото",
+      "maxSize": "Максимум 5МБ",
+      "save": "Сохранить",
+      "formNotReady": "Форма не готова",
+      "errors": {
+        "nameRequired": "Имя обязательно",
+        "usernameRequired": "Имя пользователя обязательно",
+        "emailRequired": "E-mail обязателен",
+        "phoneRequired": "Телефон обязателен",
+        "passwordRequired": "Пароль обязателен",
+        "passwordsMismatch": "Пароли не совпадают",
+        "roleRequired": "Роль должна быть выбрана",
+        "photoSizeError": "Размер фото не может превышать 5МБ",
+        "error": "Ошибка",
+        "errorOccurred": "Произошла ошибка"
+      }
+    }
+  },
   "configurator": {
     "title": "Конфигуратор панели",
     "description": "Посмотрите наши опции панели",
